student admission form

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            background-color: #333;
+            color: #fff;
             margin: 0;
             padding: 0;
         }
         .container {
             width: 50%;
             margin: auto;
-            background-color: #fff;
+            background-color: #444;
             padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
             margin-top: 50px;
         }
         h2 {
@@ -30,9 +31,11 @@
             width: 100%;
             padding: 8px;
             margin: 5px 0 10px 0;
-            border: 1px solid #ccc;
+            border: 1px solid #555;
             border-radius: 4px;
             box-sizing: border-box;
+            background-color: #555;
+            color: #fff;
         }
         input[type="submit"] {
             width: 100%;
@@ -74,12 +77,4 @@
             <option value="engineering">Engineering</option>
             <option value="medicine">Medicine</option>
             <option value="arts">Arts</option>
-            <option value="science">Science</option>
-        </select>
-
-        <input type="submit" value="Submit">
-    </form>
-</div>
-
-</body>
-</html>
+            <option value="
